added changes for multiple filters and sample payloads
Delete old data

find sample in sample folder
